<resources>
    <string name="app_name">QR You</string>
    <string name="scan">Scan code</string>
    <string name="no_scans">Scan your first code by pressing the Scan code button</string>
    <string name="my_scans">My scans</string>
    <string name="undo">Undo</string>
    <string name="deleted">deleted</string>
    <string name="scanned_number">Scan %1$s</string>
    <string name="accept">Accept</string>
    <string name="insert_name">Enter a name</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="show">Show</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="information">Information</string>
    <string name="share_app_summary">Share app easily</string>
    <string name="share_app">Share app</string>
    <string name="version">Version</string>
    <string name="qr_beep">Scanner sound</string>
    <string name="qr_beep_summary">Emits a sound when a scan is performed</string>
    <string name="checkout_app">Hey checkout the QR You app at: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="auto_open_after_scan">Open after scan</string>
    <string name="auto_open_after_scan_summary">Open the content of the scan automatically</string>
    <string name="select_default_camera">Select default camera</string>
    <string name="camera">Camera</string>
    <string name="front_camera">Front camera</string>
    <string name="external_camera">External camera</string>
    <string name="back_camera">Back camera</string>
</resources>